[gd_scene load_steps=5 format=3 uid="uid://b7b4aefhcqnis"]

[ext_resource type="Script" uid="uid://dc3v0ah53yts5" path="res://scripts/enemies/inimigo.gd" id="1_0787q"]
[ext_resource type="Texture2D" uid="uid://s0hbpu6yqu6m" path="res://icon.svg" id="1_clyw6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0787q"]
size = Vector2(123, 123)

[sub_resource type="CircleShape2D" id="CircleShape2D_clyw6"]
radius = 157.05095

[node name="Inimigo" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_0787q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_0787q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_clyw6")

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_clyw6")
debug_color = Color(0.8922174, 0.16636124, 0.6840652, 0.41960785)

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="GapDetector" type="RayCast2D" parent="."]
target_position = Vector2(20, 40)

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
